--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <tr>
       <td>Cantidad en m2</td>
       <td><span id="metrosprint">0</span> m2</td>
-      <td>$ <span id="cantprecioprint">0</span></td>
+      <td></td>
     </tr>
     <tr>
       <td>Electricidad</td>
@@ -137,6 +137,11 @@
       <td>Obras Exteriores</td>
       <td></td>
       <td>$ <span id="obrasprint">0</span></td>
+    </tr>
+    <tr>
+      <td>Obra Gris</td>
+      <td><span id="metrosprint2">0</span> m2</td>
+      <td>$ <span id="cantprecioprint">0</span></td>
     </tr>
     <tr>
       <td><strong>TOTAL ESTIMADO</strong></td>
