--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div id="theform2">
         	<p>
         <h5>Incluir:</h5>
+        <input id="obragris" type="checkbox"><label for="obragris">Obra Gris</label><br>
         <input id="electricidad" type="checkbox"><label for="electricidad">Electricidad</label><br>
         <input id="aa" type="checkbox"><label for="aa">AA</label><br>
         <input id="cctv" type="checkbox"><label for="cctv">CCTV</label><br>
@@ -104,6 +105,11 @@
       <td></td>
     </tr>
     <tr>
+      <td>Obra Gris</td>
+      <td></td>
+      <td>$ <span id="cantprecioprint">0</span></td>
+    </tr>
+    <tr>
       <td>Electricidad</td>
       <td></td>
       <td>$ <span id="electricidadprint">0</span></td>
@@ -137,11 +143,6 @@
       <td>Obras Exteriores</td>
       <td></td>
       <td>$ <span id="obrasprint">0</span></td>
-    </tr>
-    <tr>
-      <td>Obra Gris</td>
-      <td></td>
-      <td>$ <span id="cantprecioprint">0</span></td>
     </tr>
     <tr>
       <td><strong>TOTAL ESTIMADO</strong></td>
